2007-03-07  Brian Bidulock  <bidulock@openss7.org>

	* src/test/test-inet_raw.c: print primitives at default verbosity
	* src/test/test-inet_sctp.c: print primitives at default verbosity
	* src/test/test-inet_tcp.c: print primitives at default verbosity
	* src/test/test-inet_udp.c: print primitives at default verbosity
	* Makefile.am (modutil_DATA): should not be distributed
	* tests/atlocal.in: tool substitutions changed
	* src/drivers/lis.conf.in: loadable takes object name not driver name
	* src/drivers/lis.conf.in: clone device by name instead of number

2007-03-06  Brian Bidulock  <bidulock@openss7.org>

	* doc/manual/Makefile.am: attempt proper texinfo dependencies

2007-03-05  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: get rid of extraneous warnings
	* acinclude.m4: correct version numbers
	* strinet.spec.in: do not release source package
	* strinet.spec.in: do not build devices due to conflict with iBCS
	  devices in the dev package on 2.4 kernels, let the init script do its
	  job

2007-03-04  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* README-cvs: updates for release
	* THANKS: updates for release
	* debian/copyright: updates for release
	* doc/manual/news.texi: updates for release

	* strinet.spec.in: do not propagate empty flags
	* debian/rules.in: do not propagate empty flags

2007-03-02  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: improvements to common build environment
	* doc/manual/news.texi: updates for release

2007-02-28  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: #ifdef instead of #if
	* doc/manual/descrip.texi: updates and corrections
	* doc/manual/news.texi: updates and corrections
	* doc/manual/prerequisites.texi: updates and corrections
	* doc/manual/releases.texi: updates and corrections
	* doc/manual/strinet.texi: updates and corrections
	* doc/manual/todo.texi: updates and corrections